tests/reference/asr-subroutine2-2e9b84b.stderr
semantic error: Subroutine `bpe` called as a function 
 --> tests/errors/subroutine2.f90:3:9
  |
3 |     i = bpe()
  |         ^^^^^ 
